test: testing successful deployment flow

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
     <h1>🎉 My First CI/CD Deployment!</h1>
+    <!-- Change this line -->
+<p>Last Update: <strong>CI/CD TEST - This should DEPLOY successfully</strong></p>
     <p class="success">If you can see this, CI/CD worked!</p>
     <p>Repository: <span id="repo-name">Loading...</span></p>
     <p>Deployed: <span id="timestamp"></span></p>
