--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>🎉 My First CI/CD Deployment!</h1>
+    <h1>🎉 My First CI/CD Deployment! --------------------New line update</h1>
     <!-- Change this line -->
 <p>Last Update: <strong>CI/CD TEST - This should DEPLOY successfully</strong></p>
     <p class="success">If you can see this, CI/CD worked!</p>
