--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <script>
         document.getElementById('repo-name').textContent = window.location.hostname + window.location.pathname;
         document.getElementById('timestamp').textContent = new Date().toLocaleString();
-    </script>
+   script>
 </body>
-</html>
+//</html>
